# smart-classroom

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup_sheets.py
backend/: config.py  main.py  mcp_server.py  orchestrator.py
backend/agents/: analytics_agent.py  attendance_agent.py  notification_agent.py  question_agent.py  quiz_agent.py  report_agent.py
backend/services/: auth.py  llm.py  qr_service.py  rag.py  sheets.py  upload_service.py
deploy/gcp/: README.md  cloudbuild.yaml  deploy.sh  secrets.sh  setup.sh
frontend/: Dockerfile  app.js  index.html  login.html  nginx.conf  style.css
sample_data/: faculty.csv  lesson_plan.csv  students.csv  subjects.csv  users.csv
