[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-classroom"
version = "1.0.0"
description = "AI-Powered Smart Classroom Management System — MITAOE CSE AI&ML"
requires-python = ">=3.11"
dependencies = [
    # API framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",      # file uploads

    # LLM & orchestration
    "groq>=0.9",
    "langgraph>=0.1",

    # Vector store & embeddings
    "chromadb>=0.5",
    "sentence-transformers>=2.7",

    # Google APIs
    "gspread>=6.1",
    "google-auth>=2.29",
    "google-api-python-client>=2.130",

    # MCP server
    "mcp>=1.0",

    # QR code generation
    "qrcode[pil]>=7.4",
    "Pillow>=10.3",

    # Report generation
    "reportlab>=4.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",

    # HTTP client (notifications)
    "httpx>=0.27",

    # Env / config
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.scripts]
sc-server  = "backend.main:start"
sc-mcp     = "backend.mcp_server:main"
